# edge_finder

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  finder.py  main.py  pyproject.toml  requirements.txt
_typescript/: index.js  index.ts  transpile.py
app/: database.py  enums.py
app/models/: __init__.py  usuario.py  veiculo.py
app/router/: usuario.py  veiculo.py
app/schemas/: usuario.py  veiculo.py
core/: schemas.py
core/routes/: __init__.py  statusrouter.py
files/: olx.html
finder/: finder.py  models.py  services.py  utils.py
finder/barigui/: find_form.py  find_lista.py
finder/breitkopf/: endpoint.py  find_form.py  find_lista.py
finder/facebook/: find_lista.py
finder/globo_nissan/: endpoint.py  find_form.py  find_lista.py
finder/olx/: finder_form.py  finder_lista.py
finder/services/: models.py  schemas.py  services.py
finder/socarrao/: finder.py
finder/strasbourg/: find_form.py  find_lista.py
frontend/: .env.example  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  App_old.tsx  index.ts  main.tsx  schemas.ts  services.ts  utils.ts
frontend/src/components/: Accordion.tsx  Checkbox.tsx  DropdownButton.tsx  Veiculo.tsx  VeiculoCarousel.tsx  VeiculoHistorico.tsx
frontend/src/components_old/: Accordion.tsx  Site.tsx  VeiculoHistorico.tsx
frontend/src/pages/: Vehicle.tsx
frontend/ts/: events.ts  external.d.ts  index.ts  index2.ts  schemas.ts  services.ts  utils.ts
frontend/ts/components/: ItemVeiculo.ts  ItemVeiculoCarousel.ts  ItemVeiculoHistorico.ts  Site.ts  Teste.tsx  Veiculo.ts  Veiculo.tsx  index2.tsx
frontend_2/src/: App.tsx  services.ts
frontend_2/src/components/: VeiculoCarousel.tsx
migrations/: env.py
migrations/versions/: 419394ef4ab5_.py  815d0099c2a4_.py
static/js/: events.js  index.js  index2.js  index2.jsx  schemas.js  services.js  utils.js
static/js/components/: ItemVeiculo.js  ItemVeiculoCarousel.js  ItemVeiculoHistorico.js  Site.js  Teste.js  Teste.jsx  Veiculo.js  Veiculo.jsx  item.js
static/js_/: schemas.js  services.js
static/js_/components/: ItemVeiculo.js  ItemVeiculoCarousel.js  Veiculo.js
templates/: index.html  veiculo.html
