[tool.poetry]
name = "edge-finder"
version = "0.1.0"
description = ""
authors = ["Nathan"]
readme = "README.md"
packages = [{include = "edge_finder"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {version = "^0.21.1", extras = ["standard"]}
sqlalchemy = {version = "^2.0.9", extras = ["mypy"]}
fastapi-crudrouter = "^0.8.6"
jinja2 = "^3.1.2"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"
requests = "^2.30.0"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"
unidecode = "^1.3.6"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.4"
isort = "^5.12.0"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "blue . && isort ."
lint = "blue --check --diff . && isort --check --diff ."
run = "uvicorn main:app --reload"
commit = "git add . && git commit -m '.' && git push"
finder = "clear && cd finder && python finder.py"